--- a/DSL/index.html
+++ b/DSL/index.html
@@ -44,7 +44,7 @@
             </div>
           </div>
           <img src="assets/images/icons-folder/arrow.png" alt="Arrow" />
-          <a href="">
+          <a href="second-page-order.html">
             <div class="btn">Заказать Сейчас</div>
           </a>
         </div>
