--- a/DSL/second-page-order.html
+++ b/DSL/second-page-order.html
@@ -21,58 +21,58 @@
         <div class="container">
           <div class="logo">
             <img src="assets/images/logo.png" alt="DsL DOG SPORT LIFE Logo" />
+          </div>
 
-            <div class="heading-wrapper">
-              <span>Шаг 2 из 2</span>
-              <h1>Завершите <span>оформление заказа</span></h1>
+          <div class="heading-wrapper">
+            <span>Шаг 2 из 2</span>
+            <h1>Завершите <span>оформление заказа</span></h1>
+            <p>
+              При оплате в течение 12 часов,
+              <span> Вы получите подарки!</span>
+            </p>
+          </div>
+          <div class="heading-items-wrapper">
+            <div class="heading-item">
+              <img
+                src="assets/images/icons-folder/bus-icon.png"
+                alt="DsL DOG SPORT LIFE Bus Icon"
+              />
               <p>
-                При оплате в течение 12 часов,
-                <span> Вы получите подарки!</span>
+                <span>Бесплатная доставка</span>до пункт СДЭК в вашем городе
               </p>
             </div>
-            <div class="heading-items-wrapper">
-              <div class="heading-item">
-                <img
-                  src="assets/images/icons-folder/bus-icon.png"
-                  alt="DsL DOG SPORT LIFE Bus Icon"
-                />
-                <p>
-                  <span>Бесплатная доставка</span>до пункт СДЭК в вашем городе
-                </p>
-              </div>
-              <div class="heading-item">
-                <img
-                  src="assets/images/icons-folder/program-icon.png"
-                  alt="DsL DOG SPORT LIFE Program Icon"
-                />
-                <p>
-                  Полная тренировочная программа с жилетом
-                  <span>3250 руб.</span>
-                  <span>Бесплатно!</span>
-                </p>
+            <div class="heading-item">
+              <img
+                src="assets/images/icons-folder/program-icon.png"
+                alt="DsL DOG SPORT LIFE Program Icon"
+              />
+              <p>
+                Полная тренировочная программа с жилетом
+                <span>3250 руб.</span>
+                <span>Бесплатно!</span>
+              </p>
 
-                <img
-                  src="assets/images/icons-folder/arrow-two.png"
-                  alt="DsL DOG SPORT LIFE Arrow Two"
-                />
+              <img
+                src="assets/images/icons-folder/arrow-two.png"
+                alt="DsL DOG SPORT LIFE Arrow Two"
+              />
 
-                <div class="timer">
-                  <div class="timer-item">
-                    <p>12</p>
-                    <span>Часов</span>
-                  </div>
-                  <div class="timer-item">
-                    <p>00</p>
-                    <span>Минут</span>
-                  </div>
-                  <div class="timer-item">
-                    <p>00</p>
-                    <span>Секунд</span>
-                  </div>
-                  <div class="timer-item">
-                    <p>00</p>
-                    <span>Мс</span>
-                  </div>
+              <div class="timer">
+                <div class="timer-item">
+                  <p>12</p>
+                  <span>Часов</span>
+                </div>
+                <div class="timer-item">
+                  <p>00</p>
+                  <span>Минут</span>
+                </div>
+                <div class="timer-item">
+                  <p>00</p>
+                  <span>Секунд</span>
+                </div>
+                <div class="timer-item">
+                  <p>00</p>
+                  <span>Мс</span>
                 </div>
               </div>
             </div>
@@ -397,7 +397,7 @@
               </p>
             </div>
 
-            <a href=""
+            <a href="thank-page.html"
               ><div class="btn">
                 <p>Оплатить Заказ</p>
               </div></a
