--- a/c-punks/index.html
+++ b/c-punks/index.html
@@ -384,11 +384,47 @@
                 <div class="slide_Two js-slide_Two">
                   <div class="slider_Two__text js-slider_Two__text">
                     <div class="slider_Two__text-line js-slider_Two__text-line">
-                      <div><span>About</span></div>
+                      <div><span>That`s Us.</span></div>
                     </div>
 
                     <div class="slider_Two__text-line js-slider_Two__text-line">
-                      <div><h2>Us Two</h2></div>
+                      <div>
+                        <p>
+                          Lorem ipsum, dolor sit amet consectetur
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="slider_Two__text-line js-slider_Two__text-line">
+                      <div>
+                        <p>
+                          elit. Perferendis voluptatem aspernatur
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="slider_Two__text-line js-slider_Two__text-line">
+                      <div>
+                        <p>
+                          porro corrupti? Dolores nostrum sit
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="slider_Two__text-line js-slider_Two__text-line">
+                      <div>
+                        <p>
+                          eveniet ea architecto ex earum commodi,
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="slider_Two__text-line js-slider_Two__text-line">
+                      <div>
+                        <p>
+                          accusamus aliquam?
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -397,11 +433,11 @@
                 <div class="slide_Two js-slide_Two">
                   <div class="slider_Two__text js-slider_Two__text">
                     <div class="slider_Two__text-line js-slider_Two__text-line">
-                      <div><span>About</span></div>
+                      <div><span>Serices</span></div>
                     </div>
 
                     <div class="slider_Two__text-line js-slider_Two__text-line">
-                      <div><h2>Us Three</h2></div>
+                      <div><h2>Skills to pay the bills.</h2></div>
                     </div>
                   </div>
                 </div>
@@ -410,11 +446,15 @@
                 <div class="slide_Two js-slide_Two">
                   <div class="slider_Two__text js-slider_Two__text">
                     <div class="slider_Two__text-line js-slider_Two__text-line">
-                      <div><span>About</span></div>
+                      <div><span>Clients.</span></div>
                     </div>
 
                     <div class="slider_Two__text-line js-slider_Two__text-line">
-                      <div><h2>Us 4</h2></div>
+                      <div><h2>Happy Wife, happy life.</h2></div>
+                    </div>
+
+                    <div class="slider_Two__text-line js-slider_Two__text-line">
+                      <div><h2>Some of our prestigious.</h2></div>
                     </div>
                   </div>
                 </div>
@@ -426,12 +466,12 @@
                       <div
                         class="slider_Two__text-line js-slider_Two__text-line"
                       >
-                        <div><span>About</span></div>
+                        <div><span>Team.</span></div>
                       </div>
                       <div
                         class="slider_Two__text-line js-slider_Two__text-line"
                       >
-                        <div><h2>Us Five</h2></div>
+                        <div><h2>Goal diggers.</h2></div>
                       </div>
                     </div>
                   </div>
@@ -441,11 +481,11 @@
                 <div class="slide_Two js-slide_Two">
                   <div class="slider_Two__text js-slider_Two__text">
                     <div class="slider_Two__text-line js-slider_Two__text-line">
-                      <div><span>About</span></div>
+                      <div><span>Slider</span></div>
                     </div>
 
                     <div class="slider_Two__text-line js-slider_Two__text-line">
-                      <div><h2>Us 6</h2></div>
+                      <div><h2>Our Team</h2></div>
                     </div>
                   </div>
                 </div>
