--- a/faberlick/index.html
+++ b/faberlick/index.html
@@ -295,36 +295,34 @@
               />
             </div>
             <div class="part">
-              <div>
-                <!-- Main Text -->
-                <h2 data-aos="fade-left" data-aos-delay="100">O společnosti</h2>
+              <!-- Main Text -->
+              <h2 data-aos="fade-left" data-aos-delay="100">O společnosti</h2>
 
-                <!-- Info About Company -->
-                <p data-aos="fade-left" data-aos-delay="200">
-                  Faberlic je jedna z největších společnosti na trhu přímého
-                  prodeje, výrobce unikátní
-                  <span>patentované kyslíkové kosmetiky,</span> která dodává
-                  kyslík do hlubokých vrstev pokožky.
-                  <br />
-                  <br />
-                  V sortimentu Faberlic je také celá škála přípravků pro péči o
-                  pokožku a vlasy, exkluzívní francouzská parfumerie,
-                  dekorativní kosmetika, produkty pro domácnost a zdraví,
-                  dětské, dámské a pánské oděvy, prádlo, doplňky a obuv.
+              <!-- Info About Company -->
+              <p data-aos="fade-left" data-aos-delay="200">
+                Faberlic je jedna z největších společnosti na trhu přímého
+                prodeje, výrobce unikátní
+                <span>patentované kyslíkové kosmetiky,</span> která dodává
+                kyslík do hlubokých vrstev pokožky.
+                <br />
+                <br />
+                V sortimentu Faberlic je také celá škála přípravků pro péči o
+                pokožku a vlasy, exkluzívní francouzská parfumerie, dekorativní
+                kosmetika, produkty pro domácnost a zdraví, dětské, dámské a
+                pánské oděvy, prádlo, doplňky a obuv.
+              </p>
+
+              <!-- About Company Button -->
+              <button
+                class="pink-btn"
+                id="myBtnThree"
+                data-aos="fade-left"
+                data-aos-delay="300"
+              >
+                <p>
+                  Zeptat se
                 </p>
-
-                <!-- About Company Button -->
-                <button
-                  class="pink-btn"
-                  id="myBtnThree"
-                  data-aos="fade-left"
-                  data-aos-delay="300"
-                >
-                  <p>
-                    Zeptat se
-                  </p>
-                </button>
-              </div>
+              </button>
             </div>
           </div>
         </section>
@@ -458,7 +456,11 @@
             <!-- Trust Us Item -->
             <div class="trust-us-item-wrapper">
               <div class="part">
-                <div class="trust-us-item" data-aos="flip-left" data-aos-delay="100">
+                <div
+                  class="trust-us-item"
+                  data-aos="flip-left"
+                  data-aos-delay="100"
+                >
                   <span class="bold-number">1</span>
                   <p>
                     Společnost je velkým hráčem na mezinárodním trhu, dnes
@@ -467,7 +469,11 @@
                     spotřebitelů!
                   </p>
                 </div>
-                <div class="trust-us-item" data-aos="flip-left" data-aos-delay="200">
+                <div
+                  class="trust-us-item"
+                  data-aos="flip-left"
+                  data-aos-delay="200"
+                >
                   <span class="bold-number">3</span>
                   <p>
                     Faberlic má vlastní výrobu založenou na evropských
@@ -476,7 +482,11 @@
                     balení kosmetické produkce.
                   </p>
                 </div>
-                <div class="trust-us-item" data-aos="flip-left" data-aos-delay="300">
+                <div
+                  class="trust-us-item"
+                  data-aos="flip-left"
+                  data-aos-delay="300"
+                >
                   <span class="bold-number">5</span>
                   <p>
                     Po registraci dostanete kvalitní výrobky za příznívé ceny,
@@ -486,7 +496,11 @@
                 </div>
               </div>
               <div class="part">
-                <div class="trust-us-item" data-aos="flip-right" data-aos-delay="100">
+                <div
+                  class="trust-us-item"
+                  data-aos="flip-right"
+                  data-aos-delay="100"
+                >
                   <span class="bold-number">2</span>
                   <p>
                     Společnost vyrábí více než
@@ -497,7 +511,11 @@
                     verze DNS v roce 2018).
                   </p>
                 </div>
-                <div class="trust-us-item" data-aos="flip-right" data-aos-delay="200">
+                <div
+                  class="trust-us-item"
+                  data-aos="flip-right"
+                  data-aos-delay="200"
+                >
                   <span class="bold-number">4</span>
                   <p>
                     Faberlic je jedna z největších společnosti na trhu přímého
@@ -703,7 +721,11 @@
             <!-- Events Item -->
             <div class="events-item-wrapper">
               <div class="event-wrap">
-                <div class="event-item" data-aos="fade-up-left" data-aos-delay="100">
+                <div
+                  class="event-item"
+                  data-aos="fade-up-left"
+                  data-aos-delay="100"
+                >
                   <img
                     src="assets/images/image-folder/event-image/event-item-1.svg"
                     alt=""
@@ -713,7 +735,11 @@
                     objednávce.
                   </p>
                 </div>
-                <div class="event-item" data-aos="fade-up-left" data-aos-delay="200">
+                <div
+                  class="event-item"
+                  data-aos="fade-up-left"
+                  data-aos-delay="200"
+                >
                   <img
                     src="assets/images/image-folder/event-image/event-item-2.svg"
                     alt=""
@@ -725,7 +751,11 @@
                 </div>
               </div>
               <div class="event-wrap">
-                <div class="event-item" data-aos="fade-up-left" data-aos-delay="300">
+                <div
+                  class="event-item"
+                  data-aos="fade-up-left"
+                  data-aos-delay="300"
+                >
                   <img
                     src="assets/images/image-folder/event-image/event-item-3.svg"
                     alt=""
@@ -735,7 +765,11 @@
                     dárky.
                   </p>
                 </div>
-                <div class="event-item" data-aos="fade-up-left" data-aos-delay="400">
+                <div
+                  class="event-item"
+                  data-aos="fade-up-left"
+                  data-aos-delay="400"
+                >
                   <img
                     src="assets/images/image-folder/event-image/event-item-4.svg"
                     alt=""
@@ -744,7 +778,11 @@
                 </div>
               </div>
               <div class="event-wrap">
-                <div class="event-item" data-aos="fade-up-left" data-aos-delay="500">
+                <div
+                  class="event-item"
+                  data-aos="fade-up-left"
+                  data-aos-delay="500"
+                >
                   <img
                     src="assets/images/image-folder/event-image/event-item-5.svg"
                     alt=""
@@ -754,7 +792,11 @@
                     konzultanty.
                   </p>
                 </div>
-                <div class="event-item" data-aos="fade-up-left" data-aos-delay="600">
+                <div
+                  class="event-item"
+                  data-aos="fade-up-left"
+                  data-aos-delay="600"
+                >
                   <img
                     src="assets/images/image-folder/event-image/event-item-6.svg"
                     alt=""
