--- a/faberlick/index.html
+++ b/faberlick/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="" />
-    <title>Faberlick</title>
+    <title>Faberlic Family Prague — S Faberlic život je krásnější!</title>
 
     <script
       src="https://kit.fontawesome.com/5db5d6cf74.js"
@@ -20,13 +19,8 @@
     />
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- gsap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-
-    <!-- AnimeJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-
-    <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
   </head>
 
@@ -853,30 +847,32 @@
       <div class="container">
         <img src="assets/images/logo-pink-big.svg" class="logo" alt="" />
         <div class="footer-item-wrapper">
-          <div class="footer-item">
-            <h3>Kontakty</h3>
-            <ul>
-              <li>
-                Kontakty Telefonni číslo:
-                <a href="tel:+420773777534">+420773777534</a>
-              </li>
-              <li>
-                E-mail:
-                <a href="mailto:faberlicfamilyprague@gmail.com"
-                  >faberlicfamilyprague@gmail.com</a
-                >
-              </li>
-              <li>Naše adresa: Na Morani 360/3,</li>
-              <li>Praha 2 – Nové město, 128 00</li>
-              <li>(metro B – Karlovo Náměstí)</li>
-            </ul>
-          </div>
-          <div class="footer-item">
-            <h3>Pracovní doba:</h3>
-            <ul>
-              <li>Pondělí - Pátek</li>
-              <li>11:00-19:00</li>
-            </ul>
+          <div class="first-item">
+            <div class="footer-item">
+              <h3>Kontakty</h3>
+              <ul>
+                <li>
+                  Kontakty Telefonni číslo:
+                  <a href="tel:+420773777534">+420773777534</a>
+                </li>
+                <li>
+                  E-mail:
+                  <a href="mailto:faberlicfamilyprague@gmail.com"
+                    >faberlicfamilyprague@gmail.com</a
+                  >
+                </li>
+                <li>Naše adresa: Na Morani 360/3,</li>
+                <li>Praha 2 – Nové město, 128 00</li>
+                <li>(metro B – Karlovo Náměstí)</li>
+              </ul>
+            </div>
+            <div class="footer-item">
+              <h3>Pracovní doba:</h3>
+              <ul>
+                <li>Pondělí - Pátek</li>
+                <li>11:00-19:00</li>
+              </ul>
+            </div>
           </div>
           <div class="footer-item">
             <ul>
